# DLS

./: .gitignore  README.md
_Sem_01/project-GeomML/: .gitignore  README.md  pyproject.toml  requirements.txt
_Sem_01/project-GeomML/configs/: README.md  default.yaml
_Sem_01/project-GeomML/configs/checkpoint/: default.yaml
_Sem_01/project-GeomML/configs/dataset/: qm9.yaml
_Sem_01/project-GeomML/configs/model/: egnn_gap.yaml  gnn.yaml
_Sem_01/project-GeomML/configs/optimizer/: adamw.yaml
_Sem_01/project-GeomML/configs/scheduler/: reduce_lr.yaml
_Sem_01/project-GeomML/configs/train/: default.yaml
_Sem_01/project-GeomML/notebooks/: README.md
_Sem_01/project-GeomML/notebooks/dplr-dimenet_lite/: DPLR.ipynb
_Sem_01/project-GeomML/notebooks/dplr-egnn/: EGNN.ipynb
_Sem_01/project-GeomML/notebooks/dplr-molecular/: MLP2GNN.ipynb
_Sem_01/project-GeomML/notebooks/dplr-qm9/: README.md  dplr.ipynb
_Sem_01/project-GeomML/notebooks/gap/: GAP.ipynb
_Sem_01/project-GeomML/notebooks/higgs-symmetry-tda/: HIGGS.ipynb
_Sem_01/project-GeomML/scripts/: README.md  bootstrap.py  create_submodule.py  delete_submodule.py  download_alchemy.py  hydra.py  preprocess_alchemy.py  preprocess_qm9s.py
_Sem_01/project-GeomML/src/geomml/: README.md  build.py  registry.py
_Sem_01/project-GeomML/src/geomml/datasets/: QM9.md  README.md  __init__.py  alchemy.py  moleculenet.py  ogb.py  qm9.py  qm9s.py  unified.py
_Sem_01/project-GeomML/src/geomml/layers/: README.md  __init__.py
_Sem_01/project-GeomML/src/geomml/losses/: README.md  __init__.py  dipol_polar.py  kendall.py  (+1 more)
(+127 files in other folders)
